--- a/Readiculous.WebApp/Views/Dashboard/ViewNewBooks.cshtml
+++ b/Readiculous.WebApp/Views/Dashboard/ViewNewBooks.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<Readiculous.Services.ServiceModels.BookListItemViewModel>
+﻿@using X.PagedList
+@model X.PagedList.IPagedList<Readiculous.Services.ServiceModels.BookListItemViewModel>
 
 @{
     Layout = "_Layout";
@@ -69,16 +70,20 @@
         })
     ))' />
 
-    <div class="mt-5 d-flex justify-content-center">
-        <nav aria-label="Page navigation">
-            <ul class="pagination pagination-rounded">
-                <li class="page-item disabled"><a class="page-link" href="#">«</a></li>
-                <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">»</a></li>
-            </ul>
-        </nav>
+    <div class="pagination-controls row mb-4 mx-0 justify-content-center">
+        <div class="col-md-6 px-0">
+            @await Component.InvokeAsync("Pagination", new {
+            currentPage = Model.PageNumber,
+                        totalPages = Model.PageCount,
+                        pageSize = Model.PageSize,
+                        totalItems = Model.TotalItemCount,
+                        action = ViewContext.RouteData.Values["action"]?.ToString(),
+                        controller = ViewContext.RouteData.Values["controller"]?.ToString(),
+                        searchString = ViewData["CurrentFilter"],
+                        roleType = ViewData["CurrentRoleType"],
+                        sortOrder = ViewData["CurrentSortOrder"]
+                        })
+        </div>
     </div>
 </section>
 
